Prevent meeting dates from being wrapped
in narrow window sizes.

Note that this only works after removing the extraneous HTML span tags in the
previous 3 commits.

--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -62,3 +62,6 @@ a
   margin-top: 0.4em
   margin-bottom: 0.4em
   color: #606060
+
+.Home-posts-post-date
+  min-width: 94px
